--- a/admin-frontend/sass/base/_variables.scss
+++ b/admin-frontend/sass/base/_variables.scss
@@ -85,11 +85,11 @@ $monospacetype: (
 // Proxima Nova: 0.57, Museo Slab: 0.66, JAF Facit: 0.7, Brandon Grotesque: 0.65, Clavo: 0.7, Adelle: 0.66, FF Tisa Pro: 0.82, Jubilat: 0.66, Futura PT: 0.66, Chaparral Pro: 0.5, Minion Pro: 0.66, Myriad Pro: 0.66, Adobe Caslon Pro: 0.36
 
 // Text colours. British English.
-$headingColour: #1e1e1e;
-$bodyColour: #333333;
+$headingColour: #333333;
+$bodyColour: #1E1E1E;
 $linkColour: #0E58F5;
 $hoverColour: #0B348B;
-$captionColour: #798387;
+$captionColour: #ABB4B9;
 $white: #FFFFFF;
 
 // Background colours.
